--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
                   <div class="fa fa-bars tooltips" data-placement="right" data-original-title="Toggle Navigation"></div>
               </div>
             <!--logo start-->
-            <a href="index.html" class="logo"><b>DASHGUM FREE</b></a>
+            <a href="index.html" class="logo"><b>Consultor</b></a>
             <!--logo end-->
             <div class="nav notify-row" id="top_menu">
                 <!--  notification start -->
@@ -181,7 +181,7 @@
               <ul class="sidebar-menu" id="nav-accordion">
               
               	  <p class="centered"><a href="profile.html"><img src="images/ui-sam.jpg" class="img-circle" width="60"></a></p>
-              	  <h5 class="centered">Marcel Newman</h5>
+              	  <h5 class="centered">{{user.email}}</h5>
               	  	
                   <li class="mt">
                       <a class="active" href="index.html">
@@ -259,7 +259,7 @@
           </div>
       </aside>
       </span>
- 	    <section id="content">
+ 	    <section id="main-content">
     	    <section class="wrapper">
 				<div ng-view></div>
 			</section>
